2006-07-05  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: added printed output of relaxation times and goodness of fit.

2005-12-08  Jeremy Cribb <jcribb@email.unc.edu>
	* visc_ps.m: corrected the 'water' and 'karo' reference lines on the output plot.

2005-11-20  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m: added output variables that report the maximum distance traveled, the distance recovered, as well as the percent recovery.
	
2005-11-17  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: used a better approximation for the minimum value (so that the "minimum" is centered around zero).

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: commented out a debugging plot.

2005-08-13  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m: fixed yet another error in the computation.

2005-08-10  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m: updated documentation and fixed an error in the computation.

2005-07-27  Jeremy Cribb <jcribb@email.unc.edu>
	* relaxation_time.m: updated documentation. improved fitting by normalizing time.
	* laser_relaxtime.m: added.  takes a laser tracking file and a magnet log file along with other necessary parameters, applies fitting routine, generates plots, and outputs a table describing the relaxation times present.
	* laser_membranestep.m: added.  takes a laser tracking file and a magnet log file along with other necessary parameters, applies fitting routine, generates plots, and outputs a table describing the viscoelastic model parameters found in the data.
	* membrane_step_response.m: added.  returns parameter values for fit to membrane model (Sackmann '98).
	* membrane_step_response_fun.m: added.  file describing the modeling function(s) used for fitting procedure in membrane_step_response.m.

2005-07-19  Jeremy Cribb <jcribb@email.unc.edu>
	* percent_recovery.m: added.  computes the percent recovery of vector.

2005-06-29  Jeremy Cribb <jcribb@email.unc.edu>